MDEV-10942: innodb_zip.innochecksum_3, innodb_zip.innochecksum_2

fail in buildbot.

Fixed test results.